Fix Store info icon alignment

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -39,3 +39,9 @@
 		}
 	}
 }
+
+.sidebar__store {
+	button {
+		margin-right: 5px;
+	}
+}
